Issue #1 fix: removed inline css and added z-index in fliter

--- a/app/private/styles/reuseable/reUseable.less
+++ b/app/private/styles/reuseable/reUseable.less
@@ -54,7 +54,9 @@
 .padding-bottom-5{
     padding-bottom:5px!important;
 }
-
+.padding-right-28{
+    padding-right:28px!important;
+}
 // ----------------------------------------------------------------------
   // margin
 // ---
@@ -220,7 +222,7 @@
 // ---
 
 .right-floated{
-    float:right;
+    float:right !important;
 }
 
 // ----------------------------------------------------------------------
